--- a/base.css
+++ b/base.css
@@ -7,11 +7,15 @@ body {
     justify-content: center;
 }
 
+.paragrafo{
+    text-indent:20px;
+}
+
 .wrapper {
     width: 1200px;
     display: flex;
     margin: 0 auto;
-    background-color: aquamarine;
+    background-color: black;
 }
 .main {
     display: flex;
@@ -20,19 +24,81 @@ body {
 }
 .menu {
     width: 15%;
-    background-color: aqua;
+    background-color: #0c3584;
     padding: 10px 20px 0px;
 }
+.menu ul li {
+    margin: 20px 0;
+    width: 100%;
+    text-decoration-color: white;
+    color: white;
+}
+.menu ul li a{
+    text-decoration-color: white;
+    color: white;
+}
 .header {
-    background-color: rgb(5, 108, 108);
+    background-color: #83bae1 ;
     min-height: 150px;
+    display: flex;
+    align-items: center;
+}
+.header img{
+    width: 90%;
+    justify-content: center;
+    padding: 10px 50px ;
 }
 .content {
-    background-color: white;
+    background-color: #cfe5f3;
     min-height: 300px;
     padding: 20px;
 }
+.content h1{
+    display: flex;
+    justify-content: center;
+}
+.content table{
+    border: 2px solid black;
+    width: 100%;
+}
+.content thead th{
+    background-color: black;
+    color: white;
+}
+.content tr{
+    background-color:#83bae1 ;
+}
+.content tr:nth-child(even){
+    background-color: #0c3584;
+    color: white;
+}
+.content .contato{
+    display: block;
+}
+.content form input{
+    display: block;
+}
+.content form .button{
+    display: inline;
+}
 .footer {
-    background-color: rgb(99, 56, 240);
+    background-color: #83bae1;
     min-height: 150px;
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer a .informacoes{
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 50px;
+    color: black;
+    font-weight: bolder;
+}
+
+.footer a{
+    text-decoration-color: black;
 }
